# AI-Agent-with-Local-LLM-Real-Time-Tools

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt
src/: agent.py  config.py  main.py  tools.py
tests/: test_agent.py  test_tools.py
